bin_SCRIPTS=idea2idea.py

SUBDIRS=hoststats \
		booterfilter \
		ipblacklist \
		vportscan \
		voipfraud \
		dnstunnel \
		bruteforce \
		haddrscan \
		sipbruteforce \
		amplificationdetector \
		minerdetector

EXTRA_DIST=template.py test.sh ${bin_SCRIPTS}

tmpldatadir=${docdir}/report2idea
tmpldata_DATA=template.py

