bin_SCRIPTS=idea2idea.py

SUBDIRS=hoststats \
		blacklist \
		venom \
		vportscan \
		voipfraud \
		dgadetection \
		dnstunnel \
		ddos \
		bruteforce \
		haddrscan \
		sipbruteforce \
		sshbruteforceml \
		amplificationdetector \
		warden_filer \
		minerdetector

EXTRA_DIST=template.py test.sh config.yml.example ${bin_SCRIPTS}

tmpldatadir=${docdir}/report2idea
tmpldata_DATA=template.py config.yml.example

